added study material module
